REOPENED297483
[ macOS wk2 ] fast/scrolling/mac/scrollend-event-on-select-element.html is a constant text failure
https://bugs.webkit.org/show_bug.cgi?id=297483
Summary [ macOS wk2 ] fast/scrolling/mac/scrollend-event-on-select-element.html is a ...
Bryan Medina
Reported 2025-08-15 14:34:59 PDT
fast/scrolling/mac/scrollend-event-on-select-element.html is a constant text failure on macOS Sonoma x86_64 wk2, although it is flaky on all other configurations of macOS wk2. HISTORY: https://results.webkit.org/?suite=layout-tests&test=fast%2Fscrolling%2Fmac%2Fscrollend-event-on-select-element.html&limit=50000&recent=false TEXT DIFF: --- /Volumes/Data/worker/Apple-Sequoia-Debug-AppleSilicon-WK2-Tests/build/layout-test-results/fast/scrolling/mac/scrollend-event-on-select-element-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Debug-AppleSilicon-WK2-Tests/build/layout-test-results/fast/scrolling/mac/scrollend-event-on-select-element-actual.txt @@ -1,8 +1,9 @@ Test scroll over content -PASS overflowScrollendEventCount == 1 is true +FAIL overflowScrollendEventCount == 1 should be true. Was false. PASS windowScrollendEventCount == 0 is true PASS successfullyParsed is true +Some tests failed. TEST COMPLETE TEXT DIFF URL: https://build.webkit.org/results/Apple-Sequoia-Debug-AppleSilicon-WK2-Tests/298753@main%20(2097)/fast/scrolling/mac/scrollend-event-on-select-element-diff.txt
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-15 14:35:21 PDT
Bryan Medina
Comment 2 2025-08-15 14:43:01 PDT
I was able to reproduce the text failure locally on my device running macOS Sequoia arm64 using the following command: run-webkit-tests fast/scrolling/mac/scrollend-event-on-select-element.html --iterations=10 -f
Bryan Medina
Comment 3 2025-08-15 14:48:55 PDT
It looks like this test has been flaky across macOS wk2 since it was introduced.
EWS
Comment 4 2025-08-15 14:49:07 PDT
Test gardening commit 298779@main (42ff38fd1cc9): <https://commits.webkit.org/298779@main> Reviewed commits have been landed. Closing PR #49480 and removing active labels.
Tim Nguyen (:ntim)
Comment 5 2025-09-24 07:52:28 PDT
Tim Nguyen (:ntim)
Comment 6 2025-09-24 07:57:46 PDT
*** Bug 296885 has been marked as a duplicate of this bug. ***
EWS
Comment 7 2025-09-24 13:42:55 PDT
Committed 300481@main (c2a86003e463): <https://commits.webkit.org/300481@main> Reviewed commits have been landed. Closing PR #51257 and removing active labels.
WebKit Commit Bot
Comment 8 2025-10-20 13:34:08 PDT
Re-opened since this is blocked by bug 301119
Note You need to log in before you can comment on or make changes to this bug.