Some scrollend tests flakily emit two scrollend events instead of one https://bugs.webkit.org/show_bug.cgi?id=297483 rdar://158436793

Reviewed by Simon Fraser.

The tests were synthesizing a scroll followed by its momentum. Since the IOHIDEvent (which contains the info about momentum starting)
is not exposed to synthesized events, we were occasionally considering the momentum as a separate scroll.

Use `kCGEventSourceUserData` to store if we're about to start a momentum scroll and use that bit from the testing infrastructure when
synthesizing wheel events.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/Shared/mac/WebEventFactory.mm:
(WebKit::WebEventFactory::createWebWheelEvent):
* Tools/WebKitTestRunner/EventSenderProxy.h:
* Tools/WebKitTestRunner/mac/EventSenderProxy.mm:
(WTR::EventSenderProxy::sendWheelEvent):
* Tools/WebKitTestRunner/mac/UIScriptControllerMac.mm:
(WTR::UIScriptControllerMac::sendEventStream):

Canonical link: https://commits.webkit.org/300481@main